service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geth-mainnet-light-svc
spec:
  type: ClusterIP
  selector:
    app: geth-mainnet-light
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8545
